Archive2/76/748ed106c4193d/output
main.cpp:26:11: error: ‘::main’ must return ‘int’
 void main(){test();return 0;}
           ^
